Proj6 photos added and coding

--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Rhonda Laurence
 
         //- Feel free personalize the title below
         p.lead.text-light
@@ -17,31 +17,37 @@ block content
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I was recently in the Mortgage business as a Senior Underwriter for the past 10+ years. 
+            | Upon my former companies layoff, I was chosen for an apprentice position offering a tech 
+            | degree in JavaScript. This was a total life change, with ongoing learning and I found myself
+            | totally intrigued and appreciative of this creative world of web developers. I was
+            | fortunate to be chosen for the program out of more than 300 hundred applicants, and my 
+            | willingness to learn and passion for what I do has opened opportunities that I chose to 
+            | make the absolute best of this opportunity. And the learning goes on....it's like a good
+            | book thats hard to put down!
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Node.js
+          li JavaScript
+          li CSS
+          li API 
+          li JQUERY
+          li JSON
+          li AJAX
+          li HTML
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 214-403-0209
+          li rhonda.lawrence@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/rhonda-laurence-957a568/') LinkedIn
+        a.button.expanded(href='https://github.com/lewrerh') GitHub
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
-  
