--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's suppossed to accomplish, etc. 
       p.lead.text-light
-        | Portfolio Description
+        | My portfolio showcases my programming talents on the various projects and illustrates how marketable I am.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
@@ -21,9 +21,7 @@ block content
       //- Here's what the Pug for each project example should look like. 
 
       each project in projects
-       .cell
-          a(href=`project?id=${project.id}`)
-           img.thumbnail(src=`${project.image_urls[0]}`)
-          h5 #{project.project_name}
-
-      
+        .cell
+            a(href=`project?id=${project.id}`)
+              img.thumbnail(src=`${project.image_urls[0]}`)
+              h5 #{project.project_name}
