--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/images/IMG_0001.jpg')
           .cell.auto
 
             //- Add your name here.
@@ -22,10 +22,10 @@ html(class="no-js" lang="en" dir="ltr")
 
             //- Add text here to describe who you are, what you do, and why you are so aweome.
             p.text-light
-              | I am a full stack JavaScript Developer.
+              | I am a full stack javascript developer.
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
@@ -33,7 +33,7 @@ html(class="no-js" lang="en" dir="ltr")
           button.menu-icon(type='button', data-toggle='my-info')
 
           //- Add your name here.  This is for the mobile screen sized version.
-          span.title-bar-title Name
+          span.title-bar-title Rhonda Laurence
       block content
         
 
