--- a/views/about.pug
+++ b/views/about.pug
@@ -18,13 +18,13 @@ block content
         .portfolio-bio
           p
             | I was recently in the Mortgage business as a Senior Underwriter for the past 10+ years. 
-            | Upon my former companies layoff, I was chosen for an apprentice position offering a tech 
+            | Upon my former company's layoff, I was chosen for an apprentice position offering a tech 
             | degree in JavaScript. This was a total life change, with ongoing learning and I found myself
             | totally intrigued and appreciative of this creative world of web developers. I was
             | fortunate to be chosen for the program out of more than 300 hundred applicants, and my 
             | willingness to learn and passion for what I do has opened opportunities that I chose to 
-            | make the absolute best of this opportunity. And the learning goes on....it's like a good
-            | book thats hard to put down!
+            | make the absolute most of. And the learning goes on....it's like a good book that's hard to put down!
+            
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
