--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 My Web Developer Portfolio
+      h1.textShadow My Portfolio
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's suppossed to accomplish, etc. 
       p.lead.text-light
@@ -21,7 +21,7 @@ block content
       //- Here's what the Pug for each project example should look like. 
 
       each project in projects
-        .cell
+        .cell.transition
             a(href=`project?id=${project.id}`)
               img.thumbnail(src=`${project.image_urls[0]}`)
               h5 #{project.project_name}
